workspace = { members = ["bundler", "cli", "kedo-std"] }
[package]
name = "kedo_core"
version = "0.1.0"
authors = ["Kedo authors <ing.sys.kevincaicedo@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust_jsc = "0.2.3"
rust_jsc = { path = "/Users/kcaicedo/Documents/Projects/rust-jsc" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
form_urlencoded = "1.2.1"
encoding_rs = "0.8.34"
url = "2.5.2"
futures = "0.3.30"
