[package]
name = "kedo-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "kedo"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
kedo_runtime.workspace = true
tokio = { version = "1", features = ["full"] }
bundler = { path = "../bundler" }

[profile.release]
opt-level = "z" # OR keep 3 for speed; "z" for size-optimized
lto = true
strip = true
debug = false
overflow-checks = false
panic = "abort"
codegen-units = 1
