[package]
name = "kedo_js"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kedo_js"
path = "main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
bundler = { path = "../bundler" }
